--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       DB_SSLMODE: disable
       GIN_MODE: release
     ports:
-      - "${PORT}:8080"
+      - ${PORT}:8080
     depends_on:
       - db
     networks:
@@ -26,10 +26,11 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "80:80"
-      - "443:443"
+      - 80:80
+      - 443:443
     volumes:
-      - "nginx-conf.d:/etc/nginx/conf.d"
+      - "./nginx/default.conf:/etc/nginx/conf.d/default.conf"
+      - "./nginx/ssl:/ssl"
     networks:
       - api
 
@@ -43,7 +44,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       PGDATA: /data/postgres
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
       - "postgres:/data/postgres"
     networks:
